# diff_car

./: CMakeLists.txt  README.md
config/: my_controllers.yaml
description/: robot_core.xacro
diff_car/: CMakeLists.txt  README.md  keyboard_control.py  package.xml
diff_car/description/: gazebo_control.xacro  lidar.xacro  ros2_control.xacro
diff_car/diff_car/: astar_navigator.py  demo_simple_navigator.py
diff_car/launch/: demo_astar.launch.py  demo_keyboard.launch.py  demo_simple.launch.py  launch_sim.launch.py
diff_car/worlds/: demo_obstacle.world
docs/: NOTES.md
launch/: rsp.launch.py
